@@ -188,6 +188,8 @@
     <_language id="de">German</_language>
     <coordinator id="hendrikr"/>
     <webpage>http://www.gnome-ev.de/</webpage>
+    <mailing-list>gnome-de@gnome.org</mailing-list>
+    <mailing-list-subscribe>http://mail.gnome.org/mailman/listinfo/gnome-de</mailing-list-subscribe>
   </team>
   <team id="el">
     <_language id="el">Greek</_language>
