@@ -1,5 +1,10 @@
 2007-01-02  Danilo Šegan  <danilo@gnome.org>
 
+	* gnome-modules.xml.in:
+	* translation-teams.xml.in: Update more data.
+
+2007-01-02  Danilo Šegan  <danilo@gnome.org>
+
 	* releases.py (Releases.__init__): Fix handling of releases without categories.
 
 2007-01-02  Danilo Šegan  <danilo@gnome.org>
